# meatometer-zephyr

./: .gitignore  CLAUDE.md  CMakeLists.txt  EMBEDDER.md  Kconfig  Kconfig.sysbuild  PRD.md  README.md  Taskfile.yml  west.yml
.github/workflows/: ci.yml  unit-tests.yml
app/: .gitignore  CMakeLists.txt  Kconfig  prj.conf  sysbuild.conf
app/boards/: nrf7002dk_nrf5340_cpuapp.overlay
app/include/: app_config.h  app_events.h  ble_prov_iface.h  hal_iface.h  mqtt_iface.h  network_iface.h
app/src/: main.c
app/src/app/: event_handler.c  event_handler.h  measure_temp.c  state_machine.c  state_machine.h
app/src/comms/: ble_prov.c  ble_prov.h  mqtt_mgr.c  mqtt_mgr.h  net_init.c  (+3 more)
app/tests/unit/: CMakeLists.txt  prj.conf  test_session_fsm.c  test_state_machine.c  testcase.yaml
app/tests/unit/mocks/: hal_mock.c  hal_mock.h
boards/: native_sim.overlay  nrf7002dk_nrf5340_cpuapp.overlay
hooks/: pre-commit
include/: app_config.h  app_events.h  ble_prov_iface.h  hal_iface.h  mqtt_iface.h  network_iface.h  sensor_iface.h
memory/: MEMORY.md  user.md
src/: main.c  temperature.c  temperature.h
src/app/: event_handler.c  event_handler.h  measure_temp.c  measure_temp.h
src/comms/: ble_prov.c  ble_prov.h  mqtt_mgr.c  mqtt_mgr.h  wifi_mgr.c  wifi_mgr.h
src/fsm/: conn_fsm.c  conn_fsm.h  dispatcher.c  dispatcher.h  session_fsm.c  session_fsm.h
src/hal/: button.c  button.h  hal.c  hal.h  hw_init.c  led.c  led.h  sensor.c
src/sensor/: dummy.c  dummy.h  sensor_registry.c  sensor_registry.h
tests/unit/: CMakeLists.txt  test_conn_fsm.c  test_session_fsm.c
tests/unit/mocks/: ble_prov_mock.c  ble_prov_mock.h  hal_mock.c  hal_mock.h  mqtt_mock.c  mqtt_mock.h  network_mock.c  network_mock.h  sensor_mock.c  sensor_mock.h  sensor_registry_mock.c  sensor_registry_mock.h  temp_mock.c  temp_mock.h
unit/: CMakeLists.txt  test_session_fsm.c
unit/mocks/: hal_mock.c  mqtt_mock.c  mqtt_mock.h
(+12 files in other folders)
